# pet-adoption

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE.md  Makefile  PRE-REQUISITES.md  README.md  docker-compose.yaml  mlflow.db  pre-commit-config.yaml  prefect.yaml  pyproject.toml
.github/workflows/: ci-tests.yaml
artifacts/: classification_report.csv  classification_report.json
config/: config.yaml  grafana_datasources.yaml
dashboards/: prediction_monitoring.json  train_monitoring.json
notebooks/: EDA.ipynb  train.ipynb
outputs/2024-08-12/11-05-26/.hydra/: hydra.yaml
outputs/2024-08-12/11-10-54/.hydra/: hydra.yaml
outputs/2024-08-12/11-14-01/.hydra/: hydra.yaml
outputs/2024-08-12/11-17-14/.hydra/: hydra.yaml
outputs/2024-08-12/11-18-57/.hydra/: config.yaml  hydra.yaml
outputs/2024-08-12/11-19-45/.hydra/: hydra.yaml
pet_adoption/: evaluate.py  feature_engineering.py  utils.py
pet_adoption/flows/: batch_prediction.py  model_training.py  prefect_deploy.py  tasks.py
pet_adoption/prefect/: model_training.py
pet_adoption/scripts/: init_db.sql  set_up.sh
src/: data_loader.py  evaluate.py  train.py  utils.py
src/prefect/: model_training.py
src/utils/: data_loader.py  evaluate.py  train.py
tests/: utils_test.py
tests/unit/: conftest.py  evaluate_test.py  feature_engineering_test.py  tasks_test.py  utils_test.py
