[tool.poetry]
name = "src"
version = "0.1.0"
description = "ML system to predict the likelihood of a pet being adopted"
authors = ["Yorgos Papageorgiou"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
