[tool.poetry]
name = "pet_adoption"
version = "0.1.0"
description = "ML system to predict the likelihood of a pet being adopted."
authors = ["Yorgos Papageorgiou"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
pandas = "^2.2.2"
seaborn = "^0.13.2"
numpy = "<2"
ipywidgets = "^8.1.3"
ipykernel = "^6.29.5"
plotly-express = "^0.4.1"
nbformat = ">=4.2.0"
boto3 = "^1.34.146"
catboost = "^1.2.5"
scikit-learn = "^1.5.1"
mlflow = "^2.14.3"
prefect = "^2.19.9"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"
evidently = "^0.4.33"
dotenv-cli = "^3.3.1"
setuptools = "^72.1.0"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"
matplotlib = "^3.9.1.post1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
ruff = "^0.5.4"
mypy = "^1.11.0"
pytest = "^8.3.2"
pytest-cov = "^5.0.0"
moto = "<5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"

[tool.coverage.report]
skip_empty = true
